feat(relative): create another group of divs to alter with relative position

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <div id="middle"></div>
         <div></div>
     </section>
+    <section id="relative">
+        <h2>Static</h2>
+        <div></div>
+        <div id="middle"></div>
+        <div></div>
+    </section>
 
 
 </body>
