--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
         <div></div>
     </section>
 
+    <section id="fixed">
+        <h2>Fixed</h2>
+        <div></div>
+        <div id="middle"></div>
+        <div></div>
+    </section>
+
 
 
 </body>
